--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>CS_Memory</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
+  
+  background-image: url('img_girl.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 </style>
 </head>
 <body>
   
- <h1>My testing Website</h1>
+ <h1>/h1>
 <p>A website created by charles.</p>
+   
+   
+<style>
+body {
 
-</body>
+}
+  
+  
+</style></body>
 </html>
