--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   
-  background-image: url('img_girl.jpg');
+  background-image: url('WeChat Image_20221217055808.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
