--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   
   background-image: url('WeChat Image_20221217055821.jpg');
+  opacity: 0.5;
 }
 </style>
 </head>
