--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   
   background-image: url('WeChat Image_20221217055821.jpg');
-  opacity: 0.5;
 }
+  
+div.transbox {
+  margin: 30px;
+  background-color: #ffffff;
+  border: 1px solid black;
+  opacity: 0.6;
+}
+
+div.transbox p {
+  margin: 5%;
+  font-weight: bold;
+  color: #000000;
+}
+  
 </style>
 </head>
 <body>
-  
-<p>A website created by charles.</p>
-   
-   
-<style>
-body {
-
-}
-  
-  
+<div class="transbox">  
+  <p>To memorize our trip till today </p>
+</body> 
 </style></body>
 </html>
