--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ div.transbox p {
 </head>
 <body>
 <div class="transbox">  
-  <p>To memorize our trip till today </p>
+  <p><center>To memorize our trip so far. </center></p>
 </body> 
 </style></body>
 </html>
