--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   document.getElementById("timer").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";}
-  、
+  + minutes + "m " + seconds + "s ";}</script>
+
 <div class="transbox">  
 <p><center>To memorize our trip so far. </center></p>
 <p><center> 我们在一起这么久了呀 </center></p>
