--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ div.transbox p {
 <div class="transbox">  
 <p><center>To memorize our trip so far. </center></p>
 <p><center> 我们在一起这么久了呀 </center></p>
-<p id="timer"><center></center></p>
+<p id="timer"></p>
   
   
 <script>
-var date = new Date("Aug 27,2012").getTime();
+var date = new Date("Jan 5, 2024 15:37:25").getTime();
 var x = setInterval(function() {
   var now = new Date().getTime();
   var distance = countDownDate - now;
