--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ div.transbox p {
 var date = new Date("Aug 27, 2012 00:00:00").getTime();
 var x = setInterval(function() {
   var now = new Date().getTime();
-  var distance = countDownDate - now;
+  var distance =  now - date;
   var days = Math.floor(distance / (1000 * 60 * 60 * 24));
   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
