--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ div.transbox p {
 <div class="transbox">  
 <p><center>To memorize our trip so far. </center></p>
 <p><center> 我们在一起这么久了呀 </center></p>
-<p id="timer"></p>
+<p id="timer">test</p>
   
   
 <script>
