--- a/index.html
+++ b/index.html
@@ -35,7 +35,17 @@ div.transbox p {
   
   
 <script>
-  document.getElementById("timer").innerHTML =  "s ";
+var start_date = new Date("Aug 27, 2012 00:00:00").getTime();
+document.getElementById("timer").innerHTML = start_date + "s ";
+var x = setInterval(function() {
+  var now = new Date().getTime();
+  var distance =  now - start_date;
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  document.getElementById("timer").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";}
 </script>  
 </body> 
 </html>
