--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ div.transbox p {
   
 <script>
 var start_date = new Date("Aug 27, 2012 00:00:00").getTime();
-document.getElementById("timer").innerHTML = start_date + "s ";
+document.getElementById("timer").innerHTML =   "s ";
 var x = setInterval(function() {
   var now = new Date().getTime();
   var distance =  now - start_date;
