--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var x = setInterval(function() {
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
   document.getElementById("timer").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";}
+  + minutes + "m " + seconds + "s ";},1000)
 </script>  
 </body> 
 </html>
