--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ div.transbox p {
   font-weight: bold;
   color: #000000;
 } 
+p {text-align: center;}
 </style>
 </head>
 <body>
@@ -31,7 +32,7 @@ div.transbox p {
 <div class="transbox">  
 <p><center>To memorize our trip so far. </center></p>
 <p><center> 我们在一起这么久了呀 </center></p>
-<p id="timer" style="font-size:1.3em"><center></center></p>
+<p id="timer" style="font-size:1.3em"></p>
   
   
 <script>
