--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ body {
 }
   
 div.transbox {
-  margin: 30px;
+  top: 50%;
+  left: 50%;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
