--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@ body {
 }
   
 div.transbox {
-  top: 50%;
-  left: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
