--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ div.transbox {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
+    margin: auto;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
