--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ div.transbox {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: auto;
+  margin: -50px 0 0 -50px;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
