--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@ body {
 }
   
 div.transbox {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  margin: -50px 0 0 -50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
