--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@ body {
 }
   
 div.transbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 30px;
   background-color: #ffffff;
   border: 1px solid black;
   opacity: 0.6;
 }
-
 div.transbox p {
+  margin: 5%;
   font-weight: bold;
   color: #000000;
 } 
